apps/kroki/base/bpmn.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kroki-bpmn
  namespace: kroki
  labels:
    app: kroki-bpmn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kroki-bpmn
  template:
    metadata:
      labels:
        app: kroki-bpmn
    spec:
      containers:
        - name: bpmn
          image: yuzutech/kroki-bpmn:latest
          ports:
            - name: http
              containerPort: 8003
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: 512Mi
              cpu: 500m
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: kroki-bpmn
  namespace: kroki
  labels:
    app: kroki-bpmn
spec:
  type: ClusterIP
  selector:
    app: kroki-bpmn
  ports:
    - name: http
      port: 8003
      targetPort: http
