apps/kroki/base/excalidraw.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kroki-excalidraw
  namespace: kroki
  labels:
    app: kroki-excalidraw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kroki-excalidraw
  template:
    metadata:
      labels:
        app: kroki-excalidraw
    spec:
      containers:
        - name: excalidraw
          image: yuzutech/kroki-excalidraw:latest
          ports:
            - name: http
              containerPort: 8004
          securityContext:
            capabilities:
              add:
                - SYS_ADMIN
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: 512Mi
              cpu: 500m
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: kroki-excalidraw
  namespace: kroki
  labels:
    app: kroki-excalidraw
spec:
  type: ClusterIP
  selector:
    app: kroki-excalidraw
  ports:
    - name: http
      port: 8004
      targetPort: http
