apps/kroki/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kroki
  namespace: kroki
  labels:
    app: kroki
spec:
  type: ClusterIP
  selector:
    app: kroki
  ports:
    - name: http
      port: 8000
      targetPort: http
