apps/kroki/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kroki
  namespace: kroki
spec:
  ingressClassName: traefik
  rules:
    - host: kroki.home-server.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kroki
                port:
                  number: 8000
